frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
      - name: frontend
        image: lopesall/frontend:
        ports: 
        - containerPort: 80
