frontend-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prod.codemaster.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
